force-app/main/default/objects/ICX_WebFormTransco__mdt/ICX_WebFormTransco__mdt.object-meta.xml
<CustomObject>
    <description>[ICONiCS] Transform values from Webform (louisvuitton.com &gt; Contact Us form) to Salesforce values</description>
    <label>WebForm Transco</label>
    <pluralLabel>WebForm Transco</pluralLabel>
</CustomObject>