force-app/main/default/objects/ICX_WebFormTransco__mdt/fields/AtgCode__c.field-meta.xml
<CustomField>
    <fullName>AtgCode__c</fullName>
    <description>ATG (louisvuitton.com system) value of the field</description>
    <label>ATG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>