force-app/main/default/objects/ICX_WebFormTransco__mdt/fields/SalesforceCode__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCode__c</fullName>
    <description>Salesforce value</description>
    <label>Salesforce Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>