force-app/main/default/objects/ICX_WebFormTransco__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the field to transcode</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>civility</fullName>
                <default>true</default>
                <label>civility</label>
            </value>
            <value>
                <fullName>country</fullName>
            </value>
            <value>
                <fullName>nature</fullName>
            </value>
            <value>
                <fullName>category</fullName>
            </value>
            <value>
                <fullName>language</fullName>
                <isActive>false</isActive>
                <label>language</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>